// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupNotice should instruct to add a process definition key if not available 1`] = `
<SetupNotice>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Select a <b>Process Definition</b>.",
      }
    }
  />
</SetupNotice>
`;

exports[`SetupNotice should instruct to add a process definition version if not available 1`] = `
<SetupNotice>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Select a <b>Process Definition</b>.",
      }
    }
  />
</SetupNotice>
`;

exports[`SetupNotice should instruct to add group by option if not available 1`] = `
<SetupNotice>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Select what to <b>Group By</b>.",
      }
    }
  />
</SetupNotice>
`;

exports[`SetupNotice should instruct to add view option if not available 1`] = `
<SetupNotice>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Select an option for <b>View</b>.",
      }
    }
  />
</SetupNotice>
`;

exports[`SetupNotice should instruct to add visualization option if not available 1`] = `
<SetupNotice>
  <p
    dangerouslySetInnerHTML={
      Object {
        "__html": "Select an option for <b>Visualization</b> above.",
      }
    }
  />
</SetupNotice>
`;

exports[`SetupNotice should instruct to click the edit button in report view 1`] = `
<SetupNotice
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Select the <b>Edit</b> button above.</p>",
    }
  }
/>
`;

exports[`SetupNotice should instruct to select one or more reports if no reports are selected for combined reports 1`] = `
<SetupNotice>
  To display a report, please select one or more reports from the list.
</SetupNotice>
`;
